[package]
name = "oxmon"
description = "Wrapper that reports command success or failure via webhook"
keywords = ["monitor", "wrapper", "webhook"]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Florian Pallas"]
repository = "https://github.com/FlorianPallas/oxmon"

[dependencies]
anyhow = "1.0"
serde_json = "1.0"
reqwest = { version = "0.12", features = ["blocking", "multipart"] }
